<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:title="@string/display_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.jellybyn.settings">
    <com.jellybyn.settings.BrightnessPreference
        android:persistent="false"
        android:title="@string/brightness" />
    <PreferenceScreen
        android:title="@string/wallpaper_settings_title"
        android:key="wallpaper"
        android:fragment="com.jellybyn.settings.WallpaperTypeSettings" />
    <CheckBoxPreference
        android:title="@string/accelerometer_title"
        android:key="accelerometer" />
    <ListPreference
        android:persistent="false"
        android:entries="@array/screen_timeout_entries"
        android:title="@string/screen_timeout"
        android:key="screen_timeout"
        android:summary="@string/screen_timeout_summary"
        android:entryValues="@array/screen_timeout_values" />
    <PreferenceScreen
        android:title="@string/screensaver_settings_title"
        android:key="screensaver"
        android:fragment="com.jellybyn.settings.DreamSettings" />
    <com.jellybyn.settings.WarnedListPreference
        android:entries="@array/entries_font_size"
        android:title="@string/title_font_size"
        android:key="font_size"
        android:summary="@string/summary_font_size"
        android:dialogTitle="@string/dialog_title_font_size"
        android:entryValues="@array/entryvalues_font_size" />
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/notification_pulse_title"
        android:key="notification_pulse" />
    <PreferenceScreen
        android:title="@string/wifi_display_settings_title"
        android:key="wifi_display"
        android:fragment="com.jellybyn.settings.wfd.WifiDisplaySettings" />
</PreferenceScreen>