<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:title="@string/testing"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:title="@string/testing_phone_info">
        <intent
            android:targetPackage="com.androie.settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.androie.settings.RadioInfo" />
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/testing_battery_info">
        <intent
            android:targetPackage="com.androie.settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.androie.settings.BatteryInfo" />
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/testing_usage_stats">
        <intent
            android:targetPackage="com.androie.settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.androie.settings.UsageStats" />
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/testing_wifi_info">
        <intent
            android:targetPackage="com.androie.settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.androie.settings.wifi.WifiInfo" />
    </PreferenceScreen>
</PreferenceScreen>